--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
       <main>
         <canvas id="gameCanvas"></canvas>
 
+        <!-- Add mobile controls -->
+        <div class="mobile-controls">
+          <div class="control-buttons">
+            <button id="leftBtn" class="control-btn">←</button>
+            <div class="vertical-controls">
+              <button id="accelerateBtn" class="control-btn">↑</button>
+              <button id="brakeBtn" class="control-btn">↓</button>
+            </div>
+            <button id="rightBtn" class="control-btn">→</button>
+          </div>
+        </div>
+
         <div id="startScreen" class="overlay">
           <h1>Legend Asphalt</h1>
           <button id="startButton" aria-label="Start race">Race Now</button>
